// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flexShrink Should parse (flex-shrink) correctly 1`] = `
Object {
  "flexShrink": 1,
}
`;

exports[`flexShrink Should parse (flex-shrink-0) correctly 1`] = `
Object {
  "flexShrink": 0,
}
`;

exports[`flexShrink Should parse (flex-shrink-2) correctly 1`] = `
Object {
  "flexShrink": 2,
}
`;

exports[`flexShrink Should parse (flex-shrink-3) correctly 1`] = `
Object {
  "flexShrink": 3,
}
`;

exports[`flexShrink Should parse (flex-shrink-4) correctly 1`] = `
Object {
  "flexShrink": 4,
}
`;

exports[`flexShrink Should parse (flex-shrink-5) correctly 1`] = `
Object {
  "flexShrink": 5,
}
`;
